force-app/main/default/objects/FAQ_Candidate__c/FAQ_Candidate__c.object-meta.xml
<CustomObject>
    <description>A question or objection mined from one call transcript (won or lost), with the response the specialist gave and whether the call signed. Raw material the KB is clustered from.</description>
    <label>FAQ Candidate</label>
    <nameField>
        <displayFormat>FAQC-{0000}</displayFormat>
        <label>Candidate Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FAQ Candidates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>