force-app/main/default/objects/FAQ_Candidate__c/fields/Cluster_Key__c.field-meta.xml
<CustomField>
    <fullName>Cluster_Key__c</fullName>
    <description>Deterministic grouping key (Kind + objection type / question category) used to cluster candidates.</description>
    <label>Cluster Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>