force-app/main/default/objects/FAQ_Candidate__c/fields/Intake__c.field-meta.xml
<CustomField>
    <fullName>Intake__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The call this question/objection was mined from.</description>
    <label>Intake</label>
    <referenceTo>Intake__c</referenceTo>
    <relationshipLabel>FAQ Candidates</relationshipLabel>
    <relationshipName>FAQ_Candidates</relationshipName>
    <type>Lookup</type>
</CustomField>