force-app/main/default/objects/FAQ_Candidate__c/fields/Kind__c.field-meta.xml
<CustomField>
    <fullName>Kind__c</fullName>
    <description>Whether this is a Question or an Objection.</description>
    <label>Kind</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Question</fullName>
            </value>
            <value>
                <fullName>Objection</fullName>
                <default>true</default>
                <label>Objection</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>