force-app/main/default/objects/FAQ_Candidate__c/fields/Led_To_Signing__c.field-meta.xml
<CustomField>
    <fullName>Led_To_Signing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the call this came from ended in a signed retainer — marks a &quot;winning&quot; response.</description>
    <label>Led To Signing</label>
    <type>Checkbox</type>
</CustomField>