force-app/main/default/objects/FAQ_Candidate__c/fields/Needs_Review__c.field-meta.xml
<CustomField>
    <fullName>Needs_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when the verbatim text couldn&apos;t be verified in the transcript (evidence guardrail).</description>
    <label>Needs Review</label>
    <type>Checkbox</type>
</CustomField>