force-app/main/default/objects/FAQ_Candidate__c/fields/Objection_Type__c.field-meta.xml
<CustomField>
    <fullName>Objection_Type__c</fullName>
    <description>Ties to the #73 objection taxonomy when Kind = Objection.</description>
    <label>Objection Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fee_Percentage</fullName>
                <label>Fee Percentage</label>
            </value>
            <value>
                <fullName>Time_To_Resolution</fullName>
                <label>Time to Resolution</label>
            </value>
            <value>
                <fullName>Will_I_Owe_Anything</fullName>
                <label>Will I Owe Anything</label>
            </value>
            <value>
                <fullName>Why_Your_Firm</fullName>
                <label>Why Your Firm</label>
            </value>
            <value>
                <fullName>Case_Worth_Question</fullName>
                <label>Case Worth Question</label>
            </value>
            <value>
                <fullName>Need_To_Think</fullName>
                <label>Need to Think</label>
            </value>
            <value>
                <fullName>Family_Decision</fullName>
                <label>Family Decision</label>
            </value>
            <value>
                <fullName>Distrust</fullName>
            </value>
            <value>
                <fullName>Already_Talked_To_Firm</fullName>
                <label>Already Talked to Firm</label>
            </value>
            <value>
                <fullName>Process_Confusion</fullName>
                <label>Process Confusion</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <default>true</default>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>