force-app/main/default/objects/FAQ_Candidate__c/fields/Raw_Text__c.field-meta.xml
<CustomField>
    <fullName>Raw_Text__c</fullName>
    <description>Verbatim question/objection as raised on the call.</description>
    <label>Raw Text</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>