force-app/main/default/objects/FAQ_Candidate__c/fields/Response_Given__c.field-meta.xml
<CustomField>
    <fullName>Response_Given__c</fullName>
    <description>How the specialist responded on the call.</description>
    <label>Response Given</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>